--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@toast-ui/react-editor": "^2.1.0",
     "antd": "^3.17.0",
     "axios": "^0.19.2",
+    "browserslist": "^4.21.5",
+    "caniuse-lite": "^1.0.30001468",
     "clipboard": "^2.0.6",
     "draft-js": "^0.11.5",
     "draftjs-to-html": "^0.9.1",
