--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jszip": "^3.4.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "markdown-to-jsx": "^7.2.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
