--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^3.17.0",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
+    "copy-to-clipboard": "^3.3.3",
     "draft-js": "^0.11.5",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
