--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "driver.js": "^0.9.8",
-    "echarts": "^4.7.0",
+    "echarts": "^4.9.0",
     "file-saver": "^2.0.2",
     "jquery": "^3.6.4",
     "js-cookie": "^2.2.1",
@@ -39,6 +39,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
+    "recharts": "^2.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
