--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "markdown-to-jsx": "^7.2.0",
+    "marked-react": "^1.3.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -35,9 +36,11 @@
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^8.0.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-syntax-highlighter": "^15.4.5",
     "react-transition-group": "^4.4.1",
     "recharts": "^2.5.0",
     "redux": "^4.0.5",
@@ -84,6 +87,7 @@
     "customize-cra": "^0.9.1",
     "cz-conventional-changelog": "^3.0.2",
     "mockjs": "^1.1.0",
+    "raw-loader": "^4.0.2",
     "react-app-rewired": "^2.1.5",
     "user-agent": "^1.0.4"
   },
