--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-easy-crop": "^4.7.4",
     "react-loadable": "^5.5.0",
     "react-markdown": "^8.0.6",
     "react-redux": "^7.2.0",
