--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@toast-ui/react-editor": "^2.1.0",
     "antd": "^3.17.0",
+    "antd-img-crop": "^4.12.2",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "copy-to-clipboard": "^3.3.3",
@@ -50,6 +51,7 @@
     "screenfull": "^5.0.2",
     "script-loader": "^0.7.2",
     "spark-md5": "^3.0.0",
+    "styled-components": "^5.3.9",
     "xlsx": "^0.16.0"
   },
   "scripts": {
