--- a/package.json
+++ b/package.json
@@ -5,29 +5,25 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@ffmpeg/core": "^0.8.5",
+    "@ffmpeg/ffmpeg": "^0.9.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@toast-ui/react-editor": "^2.1.0",
     "antd": "^3.17.0",
-    "antd-img-crop": "^4.12.2",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
-    "copy-to-clipboard": "^3.3.3",
     "draft-js": "^0.11.5",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "driver.js": "^0.9.8",
-    "echarts": "^4.9.0",
+    "echarts": "^4.7.0",
     "file-saver": "^2.0.2",
-    "github-markdown-css": "^5.2.0",
     "jquery": "^3.6.4",
     "js-cookie": "^2.2.1",
     "jszip": "^3.4.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "markdown-to-jsx": "^7.2.0",
-    "marked-react": "^1.3.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -39,19 +35,15 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-easy-crop": "^4.7.4",
     "react-loadable": "^5.5.0",
-    "react-markdown": "^8.0.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-syntax-highlighter": "^15.4.5",
     "react-transition-group": "^4.4.1",
-    "recharts": "^2.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2",
     "script-loader": "^0.7.2",
     "spark-md5": "^3.0.0",
-    "styled-components": "^5.3.9",
     "xlsx": "^0.16.0"
   },
   "scripts": {
@@ -90,15 +82,16 @@
     "commitizen": "^4.0.3",
     "customize-cra": "^0.9.1",
     "cz-conventional-changelog": "^3.0.2",
+    "http-proxy-middleware": "^2.0.6",
     "mockjs": "^1.1.0",
-    "raw-loader": "^4.0.2",
+    "node-sass": "^8.0.0",
     "react-app-rewired": "^2.1.5",
+    "sass-loader": "^13.2.0",
     "user-agent": "^1.0.4"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "proxy": "http://124.221.192.10:7529"
+  }
 }
